# photo-marketplace-search

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: analyze-performance.md  execute-prp.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
PRPs/: INITIAL_base.md  INITIAL_gem_finder.md  INITIAL_link_validation.md  gem-finder.md  marketplace-link-validation.md  photo-to-marketplace-search.md
src/: main.py
src/api/: routes.py
src/core/: config.py  exceptions.py
src/models/: requests.py  responses.py
src/services/: link_validator.py  url_builder.py  vision_service.py
src/static/: index.html  script.js  styles.css
src/tests/: conftest.py  test_integration.py  test_link_validator.py  test_routes.py  test_url_builder.py  test_vision_service.py
